# redbench

./: .gitignore  LICENSE  README.md  pyproject.toml  run_benchmark.py
datasets/auth_bypass/: README.md  samples.jsonl  samples_fixed.jsonl.bak  samples_generated.jsonl  samples_generated_v3.jsonl.bak  samples_real.jsonl
datasets/cleartext_secrets/: samples.jsonl
datasets/command_injection/: samples.jsonl  samples_fixed.jsonl.bak  samples_generated.jsonl  samples_generated_v3.jsonl.bak  samples_real.jsonl
datasets/deserialization/: samples.jsonl  samples_fixed.jsonl.bak  samples_generated.jsonl  samples_generated_v3.jsonl.bak  samples_real.jsonl
datasets/idor/: README.md  samples.jsonl  samples_fixed.jsonl.bak  samples_generated.jsonl  samples_generated_v2.jsonl  samples_generated_v3.jsonl.bak  samples_real.jsonl
datasets/llm_crypto_code/: samples.jsonl
datasets/mass_assignment/: samples.jsonl
datasets/open_redirect/: samples.jsonl  samples_fixed.jsonl.bak  samples_generated_v3.jsonl.bak
datasets/path_traversal/: README.md  samples.jsonl  samples_fixed.jsonl.bak  samples_generated.jsonl  samples_generated_v3.jsonl.bak  samples_real.jsonl
datasets/race_condition/: samples.jsonl
datasets/redos/: samples.jsonl  samples_fixed.jsonl.bak  samples_generated_v3.jsonl.bak
datasets/sqli/: README.md  samples.jsonl  samples_fixed.jsonl.bak  samples_generated_v2.jsonl  samples_generated_v3.jsonl.bak  samples_real.jsonl
redbench/: __init__.py  evaluator.py  loader.py  reporter.py
scripts/: build_canonical.py
tests/: test_evaluator.py  test_loader.py
(+21 files in other folders)
